# file_graph

./: Cargo.toml
client/: package.json  pnpm-lock.yaml
client/src/: App.tsx  app.d.ts  main.tsx  types.d.ts
src/: lib.rs  main.rs
src/routes/: ping.rs
src/schemas/: dto.rs  fs.rs  mod.rs  schema.rs
tests/: graphql.rs
tests/common/: query.rs  setup.rs
tests/graphql/: ping.graphql  read_dir.graphql  read_file.graphql  read_home.graphql  schema.graphql
