[package]
name = "file_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
actix-web-lab = "0.22.0"
env_logger = "0.11.5"
juniper = "0.16.1"
log = "0.4.22"
num = "0.4.3"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
