[package]
name = "file_graph"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = { version = "4.9.0", features = ["secure-cookies"] }
actix-web-lab = "0.22.0"
base64 = "0.22.1"
env_logger = "0.11.5"
juniper = { version = "0.16.1", features = ["schema-language"]}
log = "0.4.22"
num = "0.4.3"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
async-std = { version = "1.5", features = ["attributes"] }
serde = "1.0.210"
serde_json = "1.0.128"
lazy_static = "1.5.0"
tempfile = "3.12.0"
home = "0.5.9"

[dev-dependencies]
gql_client = "1.0.7"
graphql_client = { version = "0.14.0", features = ["reqwest"]}
reqwest = { version = "0.12.7", features = ["json"] }
rstest = "0.22.0"
